cm4all-myproxy (0.12) unstable; urgency=low

  * asynchronous DNS resolver using systemd-resolved

 --   

cm4all-myproxy (0.11) unstable; urgency=low

  * fix assertion failure on disconnect

 -- Max Kellermann <mk@cm4all.com>  Wed, 20 Sep 2023 22:36:06 +0200

cm4all-myproxy (0.10) unstable; urgency=low

  * improve Rendezvous Hashing formula
  * pg: use a single shared PostgreSQL connection
  * pg: support LISTEN

 -- Max Kellermann <mk@cm4all.com>  Wed, 20 Sep 2023 12:13:17 +0200

cm4all-myproxy (0.9) unstable; urgency=low

  * don't delay connects if cluster monitoring is disabled
  * schedule EPOLLOUT to retry short send

 -- Max Kellermann <mk@cm4all.com>  Thu, 31 Aug 2023 15:45:28 +0200

cm4all-myproxy (0.8) unstable; urgency=low

  * support AuthSwitchRequest
  * fix use-after-free crash bug

 -- Max Kellermann <mk@cm4all.com>  Thu, 24 Aug 2023 17:21:25 +0200

cm4all-myproxy (0.7) unstable; urgency=low

  * parse ERR packet if server rejects connection
  * delay connects until all nodes of a cluster have been probed

 -- Max Kellermann <mk@cm4all.com>  Mon, 21 Aug 2023 15:34:40 +0200

cm4all-myproxy (0.6) unstable; urgency=low

  * use Rendezvous Hashing instead of Consistent Hashing
  * implement (optional) monitoring
  * fix memory leak
  * make libsystemd optional
  * systemd watchdog support
  * debian: restart after upgrade

 -- Max Kellermann <mk@cm4all.com>  Thu, 10 Aug 2023 16:55:00 +0200

cm4all-myproxy (0.5) unstable; urgency=low

  * do not strip CLIENT_SECURE_CONNECTION (fixes MariaDB login)
  * fix use-after-free crash bug after PostgreSQL disconnect

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Jul 2023 00:42:48 +0200

cm4all-myproxy (0.4) unstable; urgency=low

  * fix crash with multiple systemd sockets
  * disable Nagle's algorithm to reduce latency
  * systemd: remove "CPUSchedulingPolicy=batch"

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 Apr 2023 11:25:05 +0200

cm4all-myproxy (0.3) unstable; urgency=low
